added verified page

--- a/verified.html
+++ b/verified.html
@@ -31,9 +31,12 @@
             </ul>
         </nav>
         <main>
-
-
-            
+            <h2>Birthdate</h2>
+            <h2>Age</h2>
+            <h2>Student Email Verification</h2>
+            <h2>Student ID Upload</h2>
+            <h2>Q&amp;A</h2>
+            <h2>Verification Issues</h2>
         </main>
     </body>
 </html>
