--- a/outreach.html
+++ b/outreach.html
@@ -26,10 +26,28 @@
             </ul>
         </nav>
         <main>
-
-
-
-            
+            <div class = "purpose">
+                <h1>Mission Statement</h1>
+                <p>Our mission is to empower students by connecting them with meaningful internships, job opportunities,
+                and career support. We are dedicated to guiding future professionals through mentorship, resources, and
+                networking, ensuring they have the tools and confidence to succeed in their chosen paths.</p>
+            </div>
+            <div class = "contact">
+                <h1>Contact Information</h1>
+                    <h2>Phone: (123) 456-7890</h2>
+                    <h2>Email: Raider3@gmail.com</h2>
+                    <h2>Social Media: Raider3</h2>
+                <br>
+                <h1>Company Information</h1>
+                <h2>Core Values</h2>
+                <ul>
+                    <li>Teamwork</li>
+                    <li>Collaboration</li>
+                    <li>Innovation</li>
+                    <li>Leadership</li>
+                    <li>Community Outreach</li>
+                </ul>
+            </div>
         </main>
     </body>
 </html>
