--- a/outreach.html
+++ b/outreach.html
@@ -32,9 +32,10 @@
                 and career support. We are dedicated to guiding future professionals through mentorship, resources, and
                 networking, ensuring they have the tools and confidence to succeed in their chosen paths.</p>
             </div>
+            <div class= "horz-container">
             <div class = "contact">
                 <h1>Contact Information</h1>
-                    <h2>Phone: (123) 456-7890</h2>
+                <h2>Phone: (123) 456-7890</h2>
                     <h2>Email: Raider3@gmail.com</h2>
                     <h2>Social Media: Raider3</h2>
                 <br>
@@ -47,6 +48,8 @@
                     <li>Leadership</li>
                     <li>Community Outreach</li>
                 </ul>
+            </div>
+            <img id="graph" src="assets/ss.png" width="700">
             </div>
         </main>
     </body>
