--- a/index.html
+++ b/index.html
@@ -62,9 +62,15 @@
                 </div>
                 <div>
                     <div class="intro">
-                    <h1>HELLO <u>name</u>!</h1>
-                    <button class="seematch"><a href="match.html"><span>See Matches</span></a></button>
+                        <h1>HELLO</h1>
+                        <div class="input-intro">
+                            <input type="text" placeholder="NAME" />
+                            <span class="border"></span>
+                        </div>
+                        <h1>!</h1>
                     </div>
+                    <br>
+                    <button class="seematch"><a href="match.html"><span>See Matches</span></a></button>
                     <div class = "check-container">
                     <h2 id="checkhead">Checklist</h2>
                         <div class="checklist2">
