--- a/verified.html
+++ b/verified.html
@@ -34,19 +34,19 @@
             <div class="team1">
                 <h2>Birthdate</h2>
                     <div class="input-team">
-                            <input type="text" name="" id="" class="effect" placeholder="MM/DD/YYYY" />
+                            <input type="text" placeholder="MM/DD/YYYY" />
                             <span class="border"></span>
                     </div>
                 <h2>Age</h2>
                     <div class="input-team">
-                            <input type="text" name="" id="" class="effect" placeholder="16+" />
+                            <input type="text" placeholder="16+" />
                             <span class="border"></span>
                     </div>
             </div>
             <div class="team2">
                 <h2>Student Email Verification</h2>
                     <div class="input-team">
-                            <input type="text" name="" id="" class="effect" placeholder="ex@example.edu" />
+                            <input type="text" placeholder="ex@example.edu" />
                             <span class="border"></span>
                     </div>
             </div>
